--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
 
     <color name="color88dddd0b">#88dddd0b</color>
     <color name="colord630d984">#d630d984</color>
+    <color name="background_divider">#c6c6c6</color>
+    <color name="background_dark_divider">#b1b1b1</color>
 </resources>
