（4）文章详情修改，还未改好，大部分已完成；

--- a/app/src/main/res/layout/fragment_article_detail.xml
+++ b/app/src/main/res/layout/fragment_article_detail.xml
@@ -6,7 +6,7 @@
 
 
     <WebView
-        android:id="@+id/story_web"
+        android:id="@+id/article_detail_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical">
