--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -9,7 +9,7 @@
     <include layout="@layout/common_toolbar" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/story_viewpager"
+        android:id="@+id/article_detail_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
